--- a/src/main/resources/templates/itemPages/itemMain.html
+++ b/src/main/resources/templates/itemPages/itemMain.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-<a href="/item/main" class="btn-success">상품조회</a>
+<a href="/item/save" class="btn-success">상품등록</a>
 <div class="container">
     <table class="table table-striped table-hover text-center mt-5">
         <tr>
