--- a/src/main/resources/templates/itemPages/itemMain.html
+++ b/src/main/resources/templates/itemPages/itemMain.html
@@ -19,7 +19,7 @@
         </tr>
         <tr th:each="item: ${itemList}">
             <td th:text="${item.id}"></td>
-            <td> <a th:href="@{|/item/${item.id}|}" th:text="${item.itemName}"></a></td>
+            <td> <a th:href="@{/item/(itemId=${item.id})}" th:text="${item.itemName}"></a></td>
             <td th:text="${item.itemPrice}"></td>
             <td th:text="*{#temporals.format(item.itemCreatedDate,'yyyy-MM-dd HH:mm:ss')}"></td>
             <td th:text="${item.itemCategory}"></td>
