상세페이지 후기 수정중

--- a/src/main/resources/templates/itemPages/itemDetail.html
+++ b/src/main/resources/templates/itemPages/itemDetail.html
@@ -105,7 +105,7 @@
             <ul class="pagination justify-content-center">
                 <li class="page-item">
                     <!--첫페이지 요청 링크 /board?page=1-->
-                    <a class="page-link" th:href="@{/item/(page=1)}">
+                    <a class="page-link" th:href="@{/item(page=1)}">
                         <span>First</span>
                     </a>
                 </li>
