--- a/src/main/resources/templates/itemPages/itemDetail.html
+++ b/src/main/resources/templates/itemPages/itemDetail.html
@@ -183,8 +183,8 @@
         const writer = document.getElementById("commentWriter").value;
         const contents = document.getElementById("commentContents").value;
         const id = [[${item.id}]];
-        axios({
-            method: "post",
+        $.ajax({
+            type: "post",
             url: "/comment/save",
             data: {
                 id: id,
