장바구니 (기본)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,11 +24,7 @@
                     <div th:if="${session.member} != null">
                         <li><a href="/member/logout">로그아웃</a></li>
                         <li><a href="/member/myPage">마이페이지</a></li>
-                        <li>
-                            <form action="/cart/save2" method="post">
-                                <input type="button" name="memberId" onclick="cart()">
-                            </form>
-                        </li>
+                        <li><a th:href="@{/cart/list(userId=${session.member.userId})}">장바구니</a></li>
                         <li><a href="/question/list">고객센터</a></li>
 
                     </div>
