--- a/src/main/resources/templates/memberPages/memberSave.html
+++ b/src/main/resources/templates/memberPages/memberSave.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class=email-container>
-      <label for="memberEmail">전화번호</label>
+      <label for="memberEmail">이메일</label>
       <input type="text" class="width-450 form-control" name="memberEmail" id="memberEmail">
     </div>
 
