--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width; initial-scale=1.0"/>
     <title>GARDENING SHOP | gardening shop</title>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
+    <script src="/static/js/bootstrap.bundle.js"></script>
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/style/style2.css}" type="text/css">
     <link rel="stylesheet" th:href="@{/style/reset.css}" type="text/css">
@@ -26,6 +33,23 @@
                         <li><a href="/member/myPage">마이페이지</a></li>
                         <li><a th:href="@{/cart/list(userId=${session.member.userId})}">장바구니</a></li>
                         <li><a href="/question/list">고객센터</a></li>
+
+
+                        <div class="dropdown">
+                            <button class="dropdown-toggle" type="text" data-bs-toggle="dropdown" aria-expanded="true">
+                                마이페이지
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" th:href="@{/order/list(userId=${session.member.userId})}">주문확인/배송조회</a>
+                                </li>
+                                <li>
+                                    <button class="dropdown-item" type="button">Another action</button>
+                                </li>
+                                <li>
+                                    <button class="dropdown-item" type="button">Something else here</button>
+                                </li>
+                            </ul>
+                        </div>
 
                     </div>
                     <div th:unless="${session.member}">
