--- a/src/main/resources/templates/itemPages/itemMain.html
+++ b/src/main/resources/templates/itemPages/itemMain.html
@@ -47,29 +47,39 @@
 
 
 
+
+
 <div class="container">
     <table class="table table-striped table-hover text-center mt-5">
-        <tr>
-            <th>번호</th>
-            <th>상품</th>
-            <th>상품명</th>
-            <th>가격</th>
-            <th>등록 일자</th>
-            <th>카테고리</th>
-        </tr>
-        <tr th:each="item: ${itemList}">
-            <td th:text="${item.id}"></td>
-            <td th:if="${item.fileAttachedItem == 1}">
-                <img th:src="@{|/upload/${item.storedFileNameItem.get(0)}}" alt="" width="50" height="50">
-            </td>
-            <td th:if="${item.fileAttachedItem == 0}">
-               이미지 미등록
-            </td>
-            <td> <a th:href="@{/item/(itemId=${item.id})}" th:text="${item.itemName}"></a></td>
-            <td th:text="${item.itemPrice}"></td>
-            <td th:text="*{#temporals.format(item.itemCreatedDate,'yyyy-MM-dd HH:mm:ss')}"></td>
-            <td th:text="${item.itemCategory}"></td>
-        </tr>
+        <div th:each="item: ${itemList}">
+            <div>
+                <div class="item  col-xs-4 col-md-3">
+                    <div class="thumbnail">
+                        <div th:if="${item.fileAttachedItem == 1}">
+                            <img th:src="@{|/upload/${item.storedFileNameItem.get(0)}}" alt="" width="200" height="150">
+                        </div>
+                        <div th:if="${item.fileAttachedItem == 0}">
+                            이미지 미등록
+                        </div>
+                        <div th:text="${item.itemPrice}">
+                        </div>
+
+                        <div class="category">
+                            <h5 th:text="${item.itemCategory}"></h5>
+                        </div>
+
+                        <div class="caption">
+                            <div class="row">
+                                <div class="col-xs-12 col-md-6">
+                                    <p class="read"> <a th:href="@{/item/(itemId=${item.id})}" th:text="${item.itemName}"></a></p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
     </table>
 
     <div class="container">
