--- a/src/main/resources/templates/memberPages/memberLogin.html
+++ b/src/main/resources/templates/memberPages/memberLogin.html
@@ -50,7 +50,7 @@
     }
     //카카로 로그인 javascript
     //0. init 안에 앱 키 중 'javascript 키' 넣기
-    Kakao.init('d3c662a1dff6e0b1b829a613939f14bc');
+    Kakao.init('5ca0c2c747c6a9590ce005b29d09b00c');
     $("#kakao-login-btn").on("click", function(){
         //1. 로그인 시도
         Kakao.Auth.login({
@@ -60,11 +60,11 @@
                 Kakao.API.request({
                     url: '/v2/user/me',
                     success: function(res) {
-                        console.log(account_email);
-                        var memberEmail = res.kakao_account.email;
+                        var account = res.kakao_account;
+                        var memberEmail =account.email;
                         //scope: 카카오 로그인 동의항목
                         scopes : ['account_email', 'profile_nickname'];
-                        alert('로그인성공');
+                        alert(memberEmail);
                         location.href="/kakao?memberEmail="+memberEmail;
                     }
                 })
