--- a/src/main/resources/templates/cartPages/cartSave.html
+++ b/src/main/resources/templates/cartPages/cartSave.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="container">
-  <form action="/oder/save" method="get">
+  <form action="/order/save" method="get">
     <table class="table table-hover table-striped mt-5">
       <tr>
         <th>파일</th>
@@ -17,6 +17,7 @@
         <th>구매수량</th>
         <th>가격</th>
         <th>총가격</th>
+        <th>삭제</th>
       </tr>
       <tr>
         <input type="hidden" name="id" th:value="${item.id}">
