--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,6 +33,7 @@
                         <li><a href="/member/myPage">마이페이지</a></li>
                         <li><a th:href="@{/cart/list(userId=${session.member.userId})}">장바구니</a></li>
                         <li><a href="/question/list">고객센터</a></li>
+                        <li><a href="/member/admin">관리자페이지</a></li>
 
 
                         <div class="dropdown">
